<b> Version 1.2.3 </b>
- Reintrodotto il tema Holo
- Risolto il problema della ricerca delle transazioni non riconciliate
- Risolto il problema di conversione in valuta base nei resoconti

<b> Version 1.2.0 </b>
- Nuova sincronizzazione con Dropox. Da questa versione è possibile sincronizzare in automatico il database di Money Manager Ex. La configurazione e la gestione della sincronizzazione con Dropbox (download and upload) si trova nelle Impostazioni, Dropbox.<i> Per chi utilizzava già la sincronizzazione con dropbox, va rifata la configurazione</i>
- Nuova grafica per tutta l'applicazione
- Major bugfix: crash dell'applicazione quando si tenta creare una nuova transazione con il formato della data contenente il carattere apice (')
- Major bugfix: crash dell'applicazione quando si aprono le impostazione con il primo mese dell'anno non impostato correttamente
- Possibilità di visualizzare il saldo parziale per ogni transazione. La visualizzazione si attiva dalle impostazioni Display.
- <i>1.2.1.Bugfix: risolto crash applicazione quando si apre la ricerca</i>
- <i>1.2.1.Bugfix: risolto crash applicazione quando si apre Beneficiario, Valute e Conti con il font default settato</i>
- <i>1.2.1.Altri Bugfix minor</i>

<b> Version 1.1.4 </b>
- Aggiornamento traduzione: Russo
- <i>Risoluzione bug minori</i>

<b> Version 1.1.3 </b>
- <i>Risoluzione bug minori</i>

<b> Version 1.1.2 </b>
- Aggiunto nel Report Entrate / Uscite la possibilià di ordinare in modo crescente o decrescente i mesi.
- Quando si effettua una ricerca, e si modifica una delle transazioni selezionate, quando si ritorna l'applicazione riesegua la ricerca in automatico
- <i>Risoluzione bug minori</i>

<b> Version 1.1.0 </b>
- Aggiunta la possibilità di splittare le transazioni
- Esportazione transazioni su file CSV
- I widget possono essere posizionati nel lockscreen  (Android 4.2)
- <i>Risoluzione bug minori</i>

<b> Version 1.0.6 </b>