@@ -20,8 +20,8 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.money.manager.ex"
-    android:versionCode="261"
-    android:versionName="1.2.3" >
+    android:versionCode="265"
+    android:versionName="1.2.4" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -33,7 +33,11 @@
     <uses-permission android:name="com.android.vending.BILLING" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+	
+    <supports-screens
+        android:largeScreens="true"
+        android:xlargeScreens="true" />
+    
     <application
         android:name="com.money.manager.ex.MoneyManagerApplication"
         android:icon="@drawable/ic_launcher"
