@@ -6,8 +6,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:padding="10dp">
 
         <TextView
