@@ -1,7 +1,12 @@
+<b> Version 1.2.4 </b>
+- Solved: upload database on dropbox with empty remote folder
+- Updated the Russian translation
+- <i>Minor bugfix</i>
+
 <b> Version 1.2.3 </b>
-- reintroduced the theme Holo
-- solved the problem of search of transactions with state none
-- solved the issue of base currency conversion in the reports
+- Reintroduced the theme Holo
+- Solved the problem of search of transactions with state none
+- Solved the issue of base currency conversion in the reports
 
 <b> Version 1.2.0 </b>
 - New sync with Dropbox. From this version you can automatically synchronize the database of Money Manager Ex. The configuration and management with Dropbox (download and upload) is in the settings.<i> For those already using the sync with Dropbox will have to redo the configuration.</i>
